--- a/fox/mapdraft.html
+++ b/fox/mapdraft.html
@@ -110,7 +110,7 @@
 
 						<div id="paragraph"">
 
-						<p style="position: absolute;">I bet you think foxes are winsome creatures, as do the majority of enlightened individuals. This visualization illuminates fox sightings since the year 1800. Actually, we ought to be asking how Great Britons spend their time, and what we can and should learn from them.<br><br>by @cranberrykat</p><br>
+						<p style="position: absolute;">I bet you think foxes are winsome creatures, as do the majority of enlightened individuals. This visualization illuminates fox sightings since the year 1800. Actually, we ought to be asking how Great Britons spend their time, and what we can and should learn from them.<br><br>by @cranberry_kat</p><br>
 						</div>
 
 						<div id="linechart"></div>
