--- a/fox/mapdraft.html
+++ b/fox/mapdraft.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Where are the foxes?</title>
+		<link rel="icon" href="https://instagram.fapa1-1.fna.fbcdn.net/vp/f18a1b5cd4b5639269ef026ae007cee6/5B61FCC7/t51.2885-19/s320x320/29090585_153644635331502_3928249506365177856_n.jpg">
 		<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Fauna+One|Playfair+Display" rel="stylesheet">
 		<style type="text/css">
