--- a/fox/mapdraft.html
+++ b/fox/mapdraft.html
@@ -268,7 +268,7 @@ d3.json("lad.json", function(json) {
 			.on("mouseout", function(d) {
 				d3.select(this)
 					.attr("r", 1)
-					.attr("fill", "#FF5733")
+					.style("fill", "#FF5733")
 
 				div.transition()
 					.duration(500)
