removed console log

--- a/fox/animals.html
+++ b/fox/animals.html
@@ -267,7 +267,7 @@ d3.json("lad.json", function(json) {
 			//.style("fill", "#FF5733")
 			.style("opacity", 0.65)
 			.on("mouseover", function(d) {
-				console.log(d)
+				//console.log(d)
 				d3.select(this)
 					.attr("r", 5)
 					.style("fill", "#581845");
